--- a/Wig-Wag Visualizer.ipynb
+++ b/Wig-Wag Visualizer.ipynb
@@ -1,95 +1,208 @@
 {
-  "metadata": {
-    "kernelspec": {
-      "name": "python",
-      "display_name": "Python (Pyodide)",
-      "language": "python"
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
     },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "python",
-        "version": 3
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5bde2769fb514d50a073e1c4d9c10307",
+       "version_major": 2,
+       "version_minor": 0
       },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "text/plain": [
+       "FloatSlider(value=1.0, description='Frequency (Hz):', max=2.0, min=0.1, step=0.01)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec48f6fb0d4c4f398a68cf5a61e933b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Horn/Bell', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec0cb3e751a74e709026271dfac9443b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "from IPython.display import display, HTML\n",
+    "import io\n",
+    "import base64\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import FloatSlider, Button, Output\n",
+    "\n",
+    "# Global variables to manage state\n",
+    "horn_active = False\n",
+    "hz = 1.0  # Initial frequency\n",
+    "\n",
+    "# Output widget to capture button actions\n",
+    "out = Output()\n",
+    "\n",
+    "def create_animation(hz, horn_active):\n",
+    "    # Calculate on and off times based on frequency\n",
+    "    on_time = 1 / (2 * hz)   # Time (in seconds) for headlights to be on\n",
+    "    off_time = 1 / (2 * hz)  # Time (in seconds) for headlights to be off\n",
+    "\n",
+    "    # Create figure and axis\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.set_xlim(0, 10)\n",
+    "    ax.set_ylim(0, 2)\n",
+    "    ax.axis('off')  # Hide axes\n",
+    "    fig.patch.set_facecolor('black')\n",
+    "    ax.set_facecolor('black')\n",
+    "\n",
+    "    # Create two white circles for headlights\n",
+    "    headlight1 = plt.Circle((2, 1), 0.5, color='white', fill=True)\n",
+    "    headlight2 = plt.Circle((8, 1), 0.5, color='white', fill=True)\n",
+    "    ax.add_patch(headlight1)\n",
+    "    ax.add_patch(headlight2)\n",
+    "\n",
+    "    total_time = 1 / hz  # Total duration of the animation in seconds\n",
+    "    fps = 30            # Frames per second for the animation\n",
+    "\n",
+    "    def update(frame):\n",
+    "        cycle_time = (frame / fps) % (2 * (on_time + off_time))\n",
+    "        \n",
+    "        if horn_active:\n",
+    "            # Start the animation\n",
+    "            if cycle_time < on_time:\n",
+    "                headlight1.set_visible(True)\n",
+    "                headlight2.set_visible(False)\n",
+    "            elif cycle_time < on_time + off_time:\n",
+    "                headlight1.set_visible(False)\n",
+    "                headlight2.set_visible(True)\n",
+    "            elif cycle_time < 2 * on_time + off_time:\n",
+    "                headlight1.set_visible(True)\n",
+    "                headlight2.set_visible(False)\n",
+    "            else:\n",
+    "                headlight1.set_visible(False)\n",
+    "                headlight2.set_visible(True)\n",
+    "        else:\n",
+    "            # Continuous on when horn is not active\n",
+    "            headlight1.set_visible(True)\n",
+    "            headlight2.set_visible(True)\n",
+    "        \n",
+    "        return headlight1, headlight2\n",
+    "\n",
+    "    # Prepare to save animation frames\n",
+    "    frames = []\n",
+    "    for frame in range(int(total_time * fps)):\n",
+    "        update(frame)\n",
+    "        buf = io.BytesIO()\n",
+    "        plt.savefig(buf, format='png', bbox_inches='tight', pad_inches=0)\n",
+    "        buf.seek(0)\n",
+    "        img = Image.open(buf)\n",
+    "        frames.append(img.copy())  # Ensure a copy of the image is added to the list\n",
+    "        buf.close()\n",
+    "\n",
+    "    # Save all frames as a GIF\n",
+    "    gif_buffer = io.BytesIO()\n",
+    "    frames[0].save(\n",
+    "        gif_buffer,\n",
+    "        format='GIF',\n",
+    "        append_images=frames[1:],\n",
+    "        save_all=True,\n",
+    "        duration=1000 / fps,  # Duration per frame in milliseconds\n",
+    "        loop=0\n",
+    "    )\n",
+    "    gif_buffer.seek(0)\n",
+    "\n",
+    "    # Encode GIF as base64\n",
+    "    gif_base64 = base64.b64encode(gif_buffer.read()).decode('utf-8')\n",
+    "\n",
+    "    # Display GIF inline\n",
+    "    with out:\n",
+    "        out.clear_output()\n",
+    "        display(HTML(f'<img src=\"data:image/gif;base64,{gif_base64}\" />'))\n",
+    "\n",
+    "    plt.close(fig)  # Close the figure to avoid displaying it twice\n",
+    "\n",
+    "def on_button_click(b):\n",
+    "    global horn_active\n",
+    "    horn_active = not horn_active  # Toggle the state\n",
+    "    state = \"activated\" if horn_active else \"deactivated\"\n",
+    "    create_animation(hz_slider.value, horn_active)  # Update animation with current frequency and state\n",
+    "\n",
+    "# Create interactive widgets\n",
+    "hz_slider = FloatSlider(value=1.0, min=0.1, max=2.0, step=0.01, description='Frequency (Hz):')\n",
+    "horn_button = Button(description=\"Horn/Bell\")\n",
+    "\n",
+    "# Register button action\n",
+    "horn_button.on_click(on_button_click)\n",
+    "\n",
+    "# Display widgets\n",
+    "display(hz_slider, horn_button, out)\n",
+    "\n",
+    "def update_frequency(change):\n",
+    "    create_animation(change['new'], horn_active)\n",
+    "\n",
+    "# Link slider to animation function\n",
+    "hz_slider.observe(update_frequency, names='value')\n",
+    "\n",
+    "# Create initial animation\n",
+    "create_animation(hz_slider.value, horn_active)"
+   ]
   },
-  "nbformat_minor": 4,
-  "nbformat": 4,
-  "cells": [
-    {
-      "cell_type": "code",
-      "source": "import numpy as np\nimport matplotlib.pyplot as plt\nfrom ipywidgets import interact, FloatSlider",
-      "metadata": {
-        "trusted": true,
-        "tags": [],
-        "editable": true,
-        "slideshow": {
-          "slide_type": ""
-        }
-      },
-      "outputs": [
-        {
-          "ename": "<class 'ModuleNotFoundError'>",
-          "evalue": "No module named 'ipywidgets'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipywidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interact, FloatSlider\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipywidgets'"
-          ],
-          "output_type": "error"
-        }
-      ],
-      "execution_count": 3
-    },
-    {
-      "cell_type": "code",
-      "source": "def plot_headlight_timing(on_time=1.0, off_time=1.0):\n    time = np.arange(0, 10, 0.1)  # 10 seconds of time data\n    signal = np.zeros_like(time)\n    \n    # Generate wig wag signal\n    for i, t in enumerate(time):\n        if (t % (on_time + off_time)) < on_time:\n            signal[i] = 1\n    \n    plt.figure(figsize=(10, 2))\n    plt.plot(time, signal, label='Headlight Signal')\n    plt.xlabel('Time (s)')\n    plt.ylabel('Signal')\n    plt.title('Wig Wag Headlight Timing')\n    plt.ylim(-0.1, 1.1)\n    plt.legend()\n    plt.grid(True)\n    plt.show()",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": 4
-    },
-    {
-      "cell_type": "code",
-      "source": "interact(plot_headlight_timing,\n         on_time=FloatSlider(min=0.1, max=5.0, step=0.1, value=1.0),\n         off_time=FloatSlider(min=0.1, max=5.0, step=0.1, value=1.0));",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [
-        {
-          "ename": "<class 'NameError'>",
-          "evalue": "name 'interact' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43minteract\u001b[49m(plot_headlight_timing,\n\u001b[1;32m      2\u001b[0m          on_time\u001b[38;5;241m=\u001b[39mFloatSlider(\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5.0\u001b[39m, step\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m, value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m),\n\u001b[1;32m      3\u001b[0m          off_time\u001b[38;5;241m=\u001b[39mFloatSlider(\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5.0\u001b[39m, step\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m, value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m));\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'interact' is not defined"
-          ],
-          "output_type": "error"
-        }
-      ],
-      "execution_count": 5
-    },
-    {
-      "cell_type": "code",
-      "source": "",
-      "metadata": {
-        "trusted": true,
-        "tags": [],
-        "editable": true,
-        "slideshow": {
-          "slide_type": ""
-        }
-      },
-      "outputs": [],
-      "execution_count": null
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
