--- a/Wig-Wag Visualizer.ipynb
+++ b/Wig-Wag Visualizer.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -14,12 +17,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bde2769fb514d50a073e1c4d9c10307",
+       "model_id": "0912415bb1954b5ab17a928f4b018fa9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=1.0, description='Frequency (Hz):', max=2.0, min=0.1, step=0.01)"
+       "FloatSlider(value=1.0, description='Flash (Hz):', max=2.0, min=0.1, step=0.01)"
       ]
      },
      "metadata": {},
@@ -28,7 +31,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec48f6fb0d4c4f398a68cf5a61e933b6",
+       "model_id": "4915437d44474e4f8637829de36e8f50",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=5.0, description='Off Delay (s):', max=20.0, min=1.0, step=1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "edcb904d962f47c4a9095a9608c929c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec0cb3e751a74e709026271dfac9443b",
+       "model_id": "23e9c1c4d73a4330b096077426459524",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,15 +80,24 @@
     "import base64\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import FloatSlider, Button, Output\n",
+    "import time\n",
+    "import threading\n",
     "\n",
     "# Global variables to manage state\n",
     "horn_active = False\n",
     "hz = 1.0  # Initial frequency\n",
+    "flashing_end_time = 0  # Track when the extended flashing should end\n",
+    "wig_wag_delay = 5\n",
+    "startingTime = time.time()\n",
+    "stopFlag = False;\n",
     "\n",
     "# Output widget to capture button actions\n",
     "out = Output()\n",
     "\n",
     "def create_animation(hz, horn_active):\n",
+    "    global flashing_end_time\n",
+    "    global stopFlag\n",
+    "    \n",
     "    # Calculate on and off times based on frequency\n",
     "    on_time = 1 / (2 * hz)   # Time (in seconds) for headlights to be on\n",
     "    off_time = 1 / (2 * hz)  # Time (in seconds) for headlights to be off\n",
@@ -95,8 +121,8 @@
     "\n",
     "    def update(frame):\n",
     "        cycle_time = (frame / fps) % (2 * (on_time + off_time))\n",
-    "        \n",
-    "        if horn_active:\n",
+    "        currentTime = time.time()\n",
+    "        if horn_active and stopFlag == False:\n",
     "            # Start the animation\n",
     "            if cycle_time < on_time:\n",
     "                headlight1.set_visible(True)\n",
@@ -151,30 +177,50 @@
     "    plt.close(fig)  # Close the figure to avoid displaying it twice\n",
     "\n",
     "def on_button_click(b):\n",
-    "    global horn_active\n",
+    "    global horn_active, flashing_end_time, stopFlag, startingTime\n",
+    "    stopFlag = False\n",
     "    horn_active = not horn_active  # Toggle the state\n",
-    "    state = \"activated\" if horn_active else \"deactivated\"\n",
+    "    startingTime = time.time()\n",
+    "    if not horn_active:\n",
+    "        # Set the time when the extended flashing should end\n",
+    "        time.sleep(wig_wag_delay)\n",
+    "        stopFlag = True\n",
+    "    \n",
     "    create_animation(hz_slider.value, horn_active)  # Update animation with current frequency and state\n",
     "\n",
     "# Create interactive widgets\n",
-    "hz_slider = FloatSlider(value=1.0, min=0.1, max=2.0, step=0.01, description='Frequency (Hz):')\n",
+    "hz_slider = FloatSlider(value=1.0, min=0.1, max=2.0, step=0.01, description='Flash (Hz):')\n",
+    "wig_wag_delay_slider = FloatSlider(value=5, min=1, max=20, step=1, description='Off Delay (s):')\n",
     "horn_button = Button(description=\"Horn/Bell\")\n",
+    "\n",
     "\n",
     "# Register button action\n",
     "horn_button.on_click(on_button_click)\n",
     "\n",
     "# Display widgets\n",
-    "display(hz_slider, horn_button, out)\n",
+    "display(hz_slider, wig_wag_delay_slider, horn_button, out)\n",
     "\n",
     "def update_frequency(change):\n",
     "    create_animation(change['new'], horn_active)\n",
     "\n",
+    "def update_wig_wag_delay(change):\n",
+    "    global wig_wag_delay\n",
+    "    wig_wag_delay = change['new']\n",
+    "\n",
     "# Link slider to animation function\n",
     "hz_slider.observe(update_frequency, names='value')\n",
+    "wig_wag_delay_slider.observe(update_wig_wag_delay, names='value')\n",
     "\n",
     "# Create initial animation\n",
-    "create_animation(hz_slider.value, horn_active)"
+    "create_animation(hz_slider.value, horn_active)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
