--- a/Wig-Wag Visualizer.ipynb
+++ b/Wig-Wag Visualizer.ipynb
@@ -1,8 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wig-Wag Visualizer Python Code\n",
+    "\n",
+    "This is a code that will help visualization of timing parameters.\n",
+    "\n",
+    "\n",
+    "This code will allow the user to adjust parameters for the wig wag headlights including:\n",
+    "\n",
+    "Flash (hz): the rate that it will cycle left off, right on -> right on left off\n",
+    "\n",
+    "Off Delay (s): the # of seconds the lights will continue flash after the horn or bell is no longer pressed\n",
+    "\n",
+    "\n",
+    "How to use:\n",
+    "\n",
+    "1: Click the double play arrows in the tool bar\n",
+    "\n",
+    "2: Wait for the first image to appear\n",
+    "\n",
+    "3: Click the Horn/Bell button once to simulate the operator pressing and holding the bell or horn button\n",
+    "\n",
+    "4: Click the Horn/Bell button again to simulate lifting the bell or horn button to start the Off Delay"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
     "jupyter": {
@@ -17,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0912415bb1954b5ab17a928f4b018fa9",
+       "model_id": "80c89cc2f3f440a1a2c4aa2bfe279001",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,12 +58,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4915437d44474e4f8637829de36e8f50",
+       "model_id": "e6953092bd2e48768b1b2a5ca335454d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=5.0, description='Off Delay (s):', max=20.0, min=1.0, step=1.0)"
+       "FloatSlider(value=5.0, description='Off Delay (s):', max=20.0, step=0.5)"
       ]
      },
      "metadata": {},
@@ -45,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edcb904d962f47c4a9095a9608c929c4",
+       "model_id": "2ea95cff2dff4e2d96df6c5947705a10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23e9c1c4d73a4330b096077426459524",
+       "model_id": "4665b6b60b0d4a138160a0695b0b8914",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,9 +113,7 @@
     "# Global variables to manage state\n",
     "horn_active = False\n",
     "hz = 1.0  # Initial frequency\n",
-    "flashing_end_time = 0  # Track when the extended flashing should end\n",
-    "wig_wag_delay = 5\n",
-    "startingTime = time.time()\n",
+    "wig_wag_delay = 5 # Intial Delay for Turning Off\n",
     "stopFlag = False;\n",
     "\n",
     "# Output widget to capture button actions\n",
@@ -180,7 +205,6 @@
     "    global horn_active, flashing_end_time, stopFlag, startingTime\n",
     "    stopFlag = False\n",
     "    horn_active = not horn_active  # Toggle the state\n",
-    "    startingTime = time.time()\n",
     "    if not horn_active:\n",
     "        # Set the time when the extended flashing should end\n",
     "        time.sleep(wig_wag_delay)\n",
@@ -190,7 +214,7 @@
     "\n",
     "# Create interactive widgets\n",
     "hz_slider = FloatSlider(value=1.0, min=0.1, max=2.0, step=0.01, description='Flash (Hz):')\n",
-    "wig_wag_delay_slider = FloatSlider(value=5, min=1, max=20, step=1, description='Off Delay (s):')\n",
+    "wig_wag_delay_slider = FloatSlider(value=5, min=0, max=20, step=0.5, description='Off Delay (s):')\n",
     "horn_button = Button(description=\"Horn/Bell\")\n",
     "\n",
     "\n",
@@ -214,13 +238,6 @@
     "# Create initial animation\n",
     "create_animation(hz_slider.value, horn_active)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
