--- a/Wig-Wag Visualizer.ipynb
+++ b/Wig-Wag Visualizer.ipynb
@@ -29,12 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "editable": true,
-    "jupyter": {
-     "source_hidden": true
-    },
     "slideshow": {
      "slide_type": ""
     },
@@ -44,7 +41,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80c89cc2f3f440a1a2c4aa2bfe279001",
+       "model_id": "222d4dabe6d5403f8d1381d557cd4432",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6953092bd2e48768b1b2a5ca335454d",
+       "model_id": "a7d3d8878e644ba0bf1ada08e457b53d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ea95cff2dff4e2d96df6c5947705a10",
+       "model_id": "9bbbf6d14fce4b5f9bfa956748e8f042",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +83,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4665b6b60b0d4a138160a0695b0b8914",
+       "model_id": "0a1abe02910642118447023282513013",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='Horn/Bell: Not Active')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae2216e521f84679bf133b369ee9ab7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,18 +117,21 @@
     "import io\n",
     "import base64\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import FloatSlider, Button, Output\n",
+    "from ipywidgets import FloatSlider, Button, Output, Label\n",
     "import time\n",
     "import threading\n",
     "\n",
     "# Global variables to manage state\n",
     "horn_active = False\n",
     "hz = 1.0  # Initial frequency\n",
-    "wig_wag_delay = 5 # Intial Delay for Turning Off\n",
-    "stopFlag = False;\n",
+    "wig_wag_delay = 5  # Initial Delay for Turning Off\n",
+    "stopFlag = False\n",
     "\n",
     "# Output widget to capture button actions\n",
     "out = Output()\n",
+    "\n",
+    "# Label to display the status of the horn/bell\n",
+    "status_label = Label(value=\"Horn/Bell: Not Active\")\n",
     "\n",
     "def create_animation(hz, horn_active):\n",
     "    global flashing_end_time\n",
@@ -205,6 +219,10 @@
     "    global horn_active, flashing_end_time, stopFlag, startingTime\n",
     "    stopFlag = False\n",
     "    horn_active = not horn_active  # Toggle the state\n",
+    "\n",
+    "    # Update the status label\n",
+    "    status_label.value = \"Horn/Bell: Active\" if horn_active else \"Horn/Bell: Not Active\"\n",
+    "\n",
     "    if not horn_active:\n",
     "        # Set the time when the extended flashing should end\n",
     "        time.sleep(wig_wag_delay)\n",
@@ -222,7 +240,7 @@
     "horn_button.on_click(on_button_click)\n",
     "\n",
     "# Display widgets\n",
-    "display(hz_slider, wig_wag_delay_slider, horn_button, out)\n",
+    "display(hz_slider, wig_wag_delay_slider, horn_button, status_label, out)\n",
     "\n",
     "def update_frequency(change):\n",
     "    create_animation(change['new'], horn_active)\n",
