--- a/Wig-Wag Visualizer.ipynb
+++ b/Wig-Wag Visualizer.ipynb
@@ -29,9 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -41,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "222d4dabe6d5403f8d1381d557cd4432",
+       "model_id": "eaf0b59311be4732a2b3ee4193082bd9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7d3d8878e644ba0bf1ada08e457b53d",
+       "model_id": "7009817122704c999e733d03994671f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bbbf6d14fce4b5f9bfa956748e8f042",
+       "model_id": "5508dd2adcc84a3e8f654d501a6574d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a1abe02910642118447023282513013",
+       "model_id": "d8266f4c70614d66b490a7f3bc308c86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +100,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae2216e521f84679bf133b369ee9ab7d",
+       "model_id": "a2d6ee87b2c64b79b6826ea35d2b0a9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,13 +259,6 @@
     "# Create initial animation\n",
     "create_animation(hz_slider.value, horn_active)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
