--- a/Wig-Wag Freq Visualizer.ipynb
+++ b/Wig-Wag Freq Visualizer.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This code will allow the user to adjust parameters for the wig wag headlights including:\n",
     "\n",
-    "Flash (hz): the rate that it will cycle left off, right on -> right on left off\n",
+    "Headlight Flash (hz): the rate that it will cycle left off, right on -> right on left off\n",
     "\n",
     "Hazard Flash (Hz): the rate at which the hazards light flash (NOTE: Currently set to 1.25hz)\n",
     "\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "jupyter": {
@@ -44,12 +44,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0d6ff81577240cc9dd6eb2add91a0e7",
+       "model_id": "666e70fc16b241569bdfd236e0b83ffa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=1.0, description='Wig-Wag Flash (Hz):', max=2.0, min=0.1, step=0.01)"
+       "FloatSlider(value=1.0, description='Headlight Flash (Hz):', max=2.0, min=0.1, step=0.01)"
       ]
      },
      "metadata": {},
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3e9bd4ab3b8480eaa2d785406ec3aa3",
+       "model_id": "bca53afd8005422baeabac0c6aae9346",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04791a7ada1d4d9c95c3e19913070ab2",
+       "model_id": "130f926423364fdc95b205551bf18f62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +86,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cacb6aad4b9a4ffca156f0fb3cac83cd",
+       "model_id": "e1ac473378444b69901540438688d39b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Save GIF', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82550dcfae9947e7a99cbd4b9362c49a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,16 +125,19 @@
     "# Global variables to manage state\n",
     "hz = 1.0  # Initial frequency for headlights\n",
     "hazard_hz = 1.25  # Initial frequency for hazard lights\n",
+    "gif_buffer = None  # Initialize gif_buffer\n",
     "\n",
     "# Output widget to capture button actions\n",
     "out = Output()\n",
     "\n",
     "def create_animation(hz, hazard_hz):\n",
+    "    global gif_buffer  # Use the global variable\n",
+    "\n",
     "    # Calculate on and off times based on frequency\n",
-    "    headlight_on_time = 1 / (2 * hz)\n",
-    "    headlight_off_time = 1 / (2 * hz)\n",
-    "    hazard_on_time = 1 / (2 * hazard_hz)\n",
-    "    hazard_off_time = 1 / (2 * hazard_hz)\n",
+    "    headlight_on_time = 1 / (2 * hz)   # Time (in seconds) for headlights to be on\n",
+    "    headlight_off_time = 1 / (2 * hz)  # Time (in seconds) for headlights to be off\n",
+    "    hazard_on_time = 1 / (2 * hazard_hz)   # Time for hazard lights to be on\n",
+    "    hazard_off_time = 1 / (2 * hazard_hz)  # Time for hazard lights to be off\n",
     "\n",
     "    # Create figure and axis\n",
     "    fig, ax = plt.subplots()\n",
@@ -129,10 +146,6 @@
     "    ax.axis('off')  # Hide axes\n",
     "    fig.patch.set_facecolor('black')\n",
     "    ax.set_facecolor('black')\n",
-    "\n",
-    "    # Create a label for the frequencies\n",
-    "    frequency_label = f\"Headlight Frequency: {hz:.2f} Hz\\nHazard Frequency: {hazard_hz:.2f} Hz\"\n",
-    "    ax.text(0.1, 1.5, frequency_label, color='white', fontsize=12, va='top')\n",
     "\n",
     "    # Create two white circles for headlights\n",
     "    headlight1 = plt.Polygon([(1.5, 0.75), (3, 0.75), (3.5, 0.5), (2, 0.5)], color='white', fill=True)\n",
@@ -146,6 +159,10 @@
     "    ax.add_patch(hazard1)\n",
     "    ax.add_patch(hazard2)\n",
     "\n",
+    "    # Add labels for frequencies\n",
+    "    frequency_label = f\"Headlight Frequency: {hz:.2f} Hz\\nHazard Frequency: {hazard_hz:.2f} Hz\"\n",
+    "    ax.text(0.1, 1.5, frequency_label, color='white', fontsize=12, va='top')\n",
+    "   \n",
     "    total_time = 10  # Fixed duration of the animation in seconds\n",
     "    fps = 30         # Frames per second for the animation\n",
     "\n",
@@ -209,6 +226,16 @@
     "def on_button_click(b):\n",
     "    create_animation(hz, hazard_hz)  # Update animation with current frequencies\n",
     "\n",
+    "def save_gif(b):\n",
+    "    global gif_buffer\n",
+    "    if gif_buffer is not None:\n",
+    "        filename = f\"headlights_{hz:.2f}_hazards_{hazard_hz:.2f}.gif\"\n",
+    "        with open(filename, 'wb') as f:\n",
+    "            f.write(gif_buffer.getvalue())  # Write the GIF buffer to file\n",
+    "        print(f\"Saved GIF as '{filename}'\")\n",
+    "    else:\n",
+    "        print(\"No GIF to save. Please generate the animation first.\")\n",
+    "\n",
     "def update_headlight_frequency(change):\n",
     "    global hz\n",
     "    hz = change['new']  # Update the frequency value without generating animation\n",
@@ -218,15 +245,17 @@
     "    hazard_hz = change['new']  # Update the hazard frequency value\n",
     "\n",
     "# Create interactive widgets\n",
-    "hz_slider = FloatSlider(value=1.0, min=0.1, max=2.0, step=0.01, description='Wig-Wag Flash (Hz):')\n",
+    "hz_slider = FloatSlider(value=1.0, min=0.1, max=2.0, step=0.01, description='Headlight Flash (Hz):')\n",
     "hazard_slider = FloatSlider(value=1.25, min=0.1, max=2.0, step=0.01, description='Hazard Flash (Hz):')\n",
     "button = Button(description=\"Generate Animation\")\n",
+    "save_button = Button(description=\"Save GIF\")\n",
     "\n",
-    "# Register button action\n",
+    "# Register button actions\n",
     "button.on_click(on_button_click)\n",
+    "save_button.on_click(save_gif)\n",
     "\n",
     "# Display widgets\n",
-    "display(hz_slider, hazard_slider, button, out)\n",
+    "display(hz_slider, hazard_slider, button, save_button, out)\n",
     "\n",
     "# Link sliders to update frequency values\n",
     "hz_slider.observe(update_headlight_frequency, names='value')\n",
@@ -235,6 +264,13 @@
     "# Create initial animation\n",
     "create_animation(hz, hazard_hz)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
